Closed Bug 1662834 Opened 4 years ago Closed 4 years ago

Crash on _gdk_window_has_impl with xfce

Categories

(Core :: Widget: Gtk, defect, P2)

80 Branch
All
Linux
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: Crashdows, Assigned: stransky)

Details

Crash Data

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:80.0) Gecko/20100101 Firefox/80.0

Steps to reproduce:

open firefox browse and close firefox
heres details>>>>> https://crash-stats.mozilla.org/report/index/00e93ced-f6e3-4c67-80f9-60bc90200902#tab-details

Actual results:

firefox crashed

Expected results:

just not crash and close correctly

I'm also experiencing this crash signature with the last two nightly builds under Linux. Unlike submitter I'm not on version 80, but Mozilla/5.0 (X11; Linux x86_64; rv:82.0) Gecko/20100101 Firefox/82.0. However, it only crashes when I have Help > About window open as well. I'm running Fedora 32 KDE spin on X11 (xcb). Here are my steps to reproduce:

  1. Start Firefox.
  2. Open Help > About
  3. Click the Close window gadget (x) on Firefox's main window while Help > About is still displayed. I think pressing Alt-F4 on main window might also crash it, but menu File > Quit doesn't crash, it just closes both windows.

The terminal where I started Firefox displays

(firefox:84227): Gdk-CRITICAL **: 17:15:44.602: gdk_window_get_display: assertion 'GDK_IS_WINDOW (window)' failed
(firefox:84227): Gdk-CRITICAL **: 17:15:44.602: gdk_x11_display_get_xdisplay: assertion 'GDK_IS_DISPLAY (display)' failed

I submitted 5 or so crash reports from the last two days, e.g. https://crash-stats.mozilla.org/report/index/b2c1711c-108d-4ff0-b826-4889b0200906 yet https://crash-stats.mozilla.org/signature/?product=Firefox&signature=_gdk_window_has_impl#bugzilla says there are no bugs with this crash signature... ?

(In reply to skierpage from comment #1)

I'm also experiencing this crash signature with the last two nightly builds under Linux. Unlike submitter I'm not on version 80, but Mozilla/5.0 (X11; Linux x86_64; rv:82.0) Gecko/20100101 Firefox/82.0. However, it only crashes when I have Help > About window open as well. I'm running Fedora 32 KDE spin on X11 (xcb). Here are my steps to reproduce:

  1. Start Firefox.
  2. Open Help > About
  3. Click the Close window gadget (x) on Firefox's main window while Help > About is still displayed. I think pressing Alt-F4 on main window might also crash it, but menu File > Quit doesn't crash, it just closes both windows.

The terminal where I started Firefox displays

(firefox:84227): Gdk-CRITICAL **: 17:15:44.602: gdk_window_get_display: assertion 'GDK_IS_WINDOW (window)' failed
(firefox:84227): Gdk-CRITICAL **: 17:15:44.602: gdk_x11_display_get_xdisplay: assertion 'GDK_IS_DISPLAY (display)' failed

I submitted 5 or so crash reports from the last two days, e.g. https://crash-stats.mozilla.org/report/index/b2c1711c-108d-4ff0-b826-4889b0200906 yet https://crash-stats.mozilla.org/signature/?product=Firefox&signature=_gdk_window_has_impl#bugzilla says there are no bugs with this crash signature... ?

thank you for your steps and help, firefox crash report fix nothing just send crash reports and mozilla just watch crash reports and there is no fix until you report through bugzilla, even with bugzila they fix hardly!

It's really useful for us if you file bugs in addition to sending crash reports - it gives us an avenue to ask you for more information about the exact configuration that is causing problems. So yes, we are much more likely to be able to fix something if you file bugs.

(Another thing that massively helps is running mozregression which will pinpoint the exact change that broke things)

With the ASan Nightly build on Ubuntu 18.04.5 I don't get a crash when closing the main window when the help is open but I get these messages in the console:

(firefox:15101): Gdk-CRITICAL **: 06:31:39.319: gdk_window_get_display: assertion 'GDK_IS_WINDOW (window)' failed

(firefox:15101): Gdk-CRITICAL **: 06:31:39.319: gdk_x11_display_get_xdisplay: assertion 'GDK_IS_DISPLAY (display)' failed
AddressSanitizer:DEADLYSIGNAL
error: address range table at offset 0xd50 has an invalid tuple (length = 0) at offset 0xd60

(In reply to B.J. Herbison from comment #5)

With the ASan Nightly build on Ubuntu 18.04.5 I don't get a crash when closing the main window when the help is open but I get these messages in the console:
[ same as me in comment #1)

Thanks, interesting. I assume you're running Gnome as your window manager, not KWin?

I'm sorry, I should have mentioned it the first time. I'm running XFCE.

Crash Signature: [@ _gdk_window_has_impl]
Summary: _gdk_window_has_impl → Crash on _gdk_window_has_impl with xfce

Confirming, we have multiple crash signatures for this crash across multiple Linux distros. The STR in the comments appears to be the same as in comment 1.

Status: UNCONFIRMED → NEW
Crash Signature: [@ _gdk_window_has_impl] → [@ _gdk_window_has_impl] [@ gdk_x11_window_get_xid] [@ <name omitted> | nsWindow::UpdateTitlebarTransparencyBitmap]
Component: Untriaged → Widget: Gtk
Ever confirmed: true
OS: Unspecified → Linux
Product: Firefox → Core
Hardware: Unspecified → All

Nightly build ID 20200907094115 was still crashing. But with Nightly build ID 20200907214307 , I wasn't able to reproduce my crash in six attempts, and I don't see the Gdk-CRITICAL warnings in console output.
:happy: :satisfied: :) :-) :guessMarkdownEmojisDon'tWorkHere: \o/

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Priority: -- → P2
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/02170317fa88
[Linux] Check mGdkWindow validity on nsWindow::UpdateTitlebarTransparencyBitmap(), r=jhorak
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: