Bug 1662834 [Linux] Check mGdkWindow validity on nsWindow::UpdateTitlebarTransparencyBitmap(), r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D90144